--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'checkstyle'
 }
 
 repositories {
@@ -28,7 +29,7 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass.set("ip.Squiddy")
 }
 
 shadowJar {
@@ -38,4 +39,9 @@ shadowJar {
 
 run{
     standardInput = System.in
+}
+
+checkstyle{
+    configFile = file("config/checkstyle/checkstyle.xml")
+    toolVersion = '11.0.0'
 }
